[package]
name = "dessin-scale"
version = "0.1.0"
authors = ["emittam <dev@emittam.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
structopt = "0.3.21"
imageproc = "0.22.0"
anyhow = "1.0.41"
thiserror = "1.0.26"
